--- a/blocks/footer/index.html
+++ b/blocks/footer/index.html
@@ -1,9 +1,8 @@
 <footer>
   <section class="footer_text">
-    <p>Самая официальная страница спектакля<br>
-    <strong>«Очень смешная комедия о том, как ШОУ ПОШЛО НЕ ТАК»</strong><br>
-    Театр МДМ</p>
-    <p class="footer_text_smaller">ООО «Фэнси Шоу»<br>
-    &copy; 2018</p>
+    <p>Some footer text<br>
+    <strong>Some footer text</strong><br>
+    Some footer text</p>
+    <p class="footer_text_smaller">&copy; 2018</p>
   </section>
 </footer>
