--- a/blocks/section_note/index.html
+++ b/blocks/section_note/index.html
@@ -1,6 +1,5 @@
 <section class="site sec_note">
-  <p class="sec_note_p">От продюсеров российских постановок мюзиклов
-    <br>MAMMA MIA!, CHICAGO, «Призрак Оперы», «Бал вампиров», «Привидение»,
-    <br>которым осточертели мюзиклы, и при участии
-    <br>Общества любителей театра Политехнического Университета Корнли</p>
+  <p class="sec_note_p">
+    Some text some text some text some text some text
+  </p>
   </section>
