ARM_seller: all except advantages

--- a/testsite/blocks/prices/index.html
+++ b/testsite/blocks/prices/index.html
@@ -1,5 +1,6 @@
-<section class="prices">
-  <div class="content">
+<section class="prices" id="prices">
+  <div class="prices_content">
+    <h2 class="prices_h2">Тарифы</h2>
     <table class="prices_table">
       <thead>
         <tr>
@@ -60,15 +61,20 @@
           <td class="c3"></td>
         </tr>
         <tr>
-          <td class="c1">БОНУСЫ!<br>Онлайн-помощник 24/7<br>Полная правовая база</td>
+          <td class="c1"><strong class="prices_strong">Бонус!</strong> Онлайн-помощник 24/7</td>
+          <td class="c2"></td>
+          <td class="c3"></td>
+        </tr>
+        <tr>
+          <td class="c1"><strong class="prices_strong">Бонус!</strong> Полная правовая база</td>
           <td class="c2"></td>
           <td class="c3"></td>
         </tr>
       </tbody>
     </table>
-    <div class="price_buttons">
-      <td class="c2"><a href="https://www.proflit.ru/Product.aspx?short=1&pid=7ea07e30-356b-4c87-a830-69fca9c52415&cid=00000000-0000-0000-0000-000000000000&error=1&activityId=%7b135e3289-e23a-4e54-b702-6adf6a195177%7d" class="price_button white">КУПИТЬ</a></td>
-      <td class="c3"><a href="https://www.proflit.ru/Product.aspx?short=1&pid=7ea07e30-356b-4c87-a830-69fca9c52415&cid=00000000-0000-0000-0000-000000000000&error=1&activityId=%7b135e3289-e23a-4e54-b702-6adf6a195177%7d" class="price_button">КУПИТЬ</a></td>
+    <h2 class="prices_h2 prices_h2_center">Сделайте свою заявку на успех – попробуйте сервис бесплатно!</h2>
+    <div class="prices_buttons">
+      <a class="prices_text_button">Демо-доступ</a>
     </div>
   </div>
 </section>
