--- a/testsite/blocks/footer/index.html
+++ b/testsite/blocks/footer/index.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="content">
+  <div class="footer_content">
     <div class="footer_column_left">
       <p class="footer_p_phone">По всем вопросам: 8 (800) 775-48-66</p>
       <p class="footer_p_copy">Медиагруппа Актион-МЦФЭР, 2018</p>
