--- a/testsite/blocks/header/index.html
+++ b/testsite/blocks/header/index.html
@@ -1,15 +1,23 @@
 <header>
-  <div class="content header_content">
+  <div class="header_content">
     <section class="header_top">
       <div class="header_proj_logo"></div>
       <div class="header_right_elems">
-        <a class="header_phone">8 (800) 775-48-66</a>
-        <a class="header_demo_button">Заказать демонстрацию</a>
-        <div id="id2-button"></div>
+        <ul class="header_menu">
+          <li><a href="#about" class="header_menu_item">Кто мы?</a></li>
+          <li><a href="#features" class="header_menu_item">Возможности</a></li>
+          <li><a href="#advantages" class="header_menu_item">Преимущества</a></li>
+          <li><a href="#prices" class="header_menu_item">Тарифы</a></li>
+          <li><div id="id2-button"></div></li>
+        </ul>
+        <a class="header_phone">
+          8 (800) 775-48-66
+          <span class="header_phone_note">звонок по РФ бесплатный</span>
+        </a>
       </div>
     </section>
     <section class="header_text">
-      <h1>Быстро и точно ищем нужные закупки,<br>чтобы Вы побеждали!</h1>
+      <h1 class="header_h1">Быстро и точно ищем нужные закупки,<br>чтобы Вы побеждали!</h1>
       <p class="header_p">Наше выгодное предложение – Ваша заявка на успех!<br>Ваш Бонус! Консультации экспертов в режиме онлайн 24/7.</p>
       <a data-demo="1" class="header_button">Узнать подробнее</a>
     </section>
