ARM_seller: done

--- a/testsite/blocks/features/index.html
+++ b/testsite/blocks/features/index.html
@@ -42,7 +42,7 @@
     <li class="features_image_column features_column_left"></li>
     <li class="features_text_column features_column_right">
       <h2 class="features_h2">Помогаем побеждать с&nbsp;лучшим предложением!</h2>
-      <p class="features_text_p">Встроенный расчет средней цены по региону. Цена рассчитывается сервисом автоматически по данным заключенных и исполненных контрактов в регионе. Сделайте на их основе лучшее предложение и заказ Ваш!</p>
+      <p class="features_text_p features_text_p_nobm">Встроенный расчет средней цены по региону. Цена рассчитывается сервисом автоматически по данным заключенных и исполненных контрактов в регионе. Сделайте на их основе лучшее предложение и заказ Ваш!</p>
       <a data-demo="1" class="features_text_button">Хочу побеждать!</a>
     </li>
   </ul>
