arm_seller: done, renamed

--- a/arm_seller/blocks/features/index.html
+++ b/arm_seller/blocks/features/index.html
@@ -10,11 +10,11 @@
       </ul>
       <a data-demo="1" class="features_text_button">Найти закупки</a>
     </li>
-    <li class="features_image_column features_column_right"></li>
+    <li class="features_image_column features_image_column_1 features_column_right"></li>
   </ul>
 
   <ul class="features_content">
-    <li class="features_image_column features_column_left"></li>
+    <li class="features_image_column features_image_column_2 features_column_left"></li>
     <li class="features_text_column features_column_right">
       <h2 class="features_h2">Оперативно уведомляем о&nbsp;новых закупках!</h2>
       <ul class="features_ul">
@@ -35,11 +35,11 @@
       </ul>
       <a data-demo="1" class="features_text_button">Хочу попробовать!</a>
     </li>
-    <li class="features_image_column features_column_right"></li>
+    <li class="features_image_column features_image_column_3 features_column_right"></li>
   </ul>
 
   <ul class="features_content">
-    <li class="features_image_column features_column_left"></li>
+    <li class="features_image_column features_image_column_4 features_column_left"></li>
     <li class="features_text_column features_column_right">
       <h2 class="features_h2">Помогаем побеждать с&nbsp;лучшим предложением!</h2>
       <p class="features_text_p features_text_p_nobm">Встроенный расчет средней цены по региону. Цена рассчитывается сервисом автоматически по данным заключенных и исполненных контрактов в регионе. Сделайте на их основе лучшее предложение и заказ Ваш!</p>
@@ -47,18 +47,6 @@
     </li>
   </ul>
 
-  <ul class="features_content">
-    <li class="features_text_column features_column_left">
-      <h2 class="features_h2">Раскрываем больше информации для&nbsp;принятия решения!</h2>
-      <ul class="features_ul">
-        <li><strong class="features_strong">Полную документацию</strong> можно посмотреть в карточке закупки. Чтобы скачать на компьютер и работать с нужными файлами.</li>
-        <li><strong class="features_strong">История контрактов заказчика</strong> доступна по текущим и завершенным торгам за несколько последних лет. Чтобы проанализировать репутацию потенциального заказчика до участия в закупке.</li>
-        <li><strong class="features_strong">Общие сведения о компании</strong> в карточке заказчика: наименование, основные реквизиты, контактные данные</li>
-      </ul>
-      <a data-demo="1" class="features_text_button">Хочу попробовать!</a>
-    </li>
-    <li class="features_image_column features_column_right"></li>
-  </ul>
 
   <ul class="features_content">
     <li class="features_text_column features_column_wide">
