--- a/arm_seller/blocks/header/index.html
+++ b/arm_seller/blocks/header/index.html
@@ -10,10 +10,18 @@
           <li><a href="#prices" class="header_menu_item">Тарифы</a></li>
           <li><div id="id2-button"></div></li>
         </ul>
-        <a class="header_phone">
-          8 (800) 775-48-66
-          <span class="header_phone_note">звонок по РФ бесплатный</span>
-        </a>
+        <ul class="header_social">
+          <li><a class="header_social_item icon-facebook-rect"></a></li>
+          <li><a class="header_social_item icon-vkontakte-rect"></a></li>
+          <li><a class="header_social_item icon-odnoklassniki-rect"></a></li>
+          <li><a class="header_social_item icon-twitter-rect"></a></li>
+          <li>
+            <a class="header_phone">
+              8 (800) 775-48-66
+              <span class="header_phone_note">звонок по РФ бесплатный</span>
+            </a>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="header_text">
