--- a/arm_seller/blocks/prices/index.html
+++ b/arm_seller/blocks/prices/index.html
@@ -74,7 +74,7 @@
     </table>
     <h2 class="prices_h2 prices_h2_center">Сделайте свою заявку на успех – попробуйте сервис бесплатно!</h2>
     <div class="prices_buttons">
-      <a class="prices_text_button">Демо-доступ</a>
+      <a data-demo="1" class="prices_text_button">Демо-доступ</a>
     </div>
   </div>
 </section>
